--- a/appointment_management/views/appointment_list_template.xml
+++ b/appointment_management/views/appointment_list_template.xml
@@ -24,6 +24,47 @@
                 </button>
             </div>
 
+            <!-- Form tìm kiếm lịch hẹn -->
+            <div class="card mb-3">
+                <div class="card-header bg-info text-white">
+                    <h5 class="mb-0"><i class="fa fa-search"></i> Tìm kiếm lịch hẹn</h5>
+                </div>
+                <div class="card-body">
+                    <form method="GET" action="/clinic/appointments" class="search-form">
+                        <input type="hidden" name="view_mode" t-att-value="view_mode"/>
+                        <input type="hidden" name="state" t-att-value="state_filter"/>
+                        <div class="row">
+                            <div class="col-md-4 form-group">
+                                <label for="search">Tìm kiếm</label>
+                                <input type="text" class="form-control" id="search" name="search"
+                                       t-att-value="search_term"
+                                       placeholder="Mã lịch hẹn, tên bệnh nhân, bác sĩ..."/>
+                            </div>
+                            <div class="col-md-4 form-group">
+                                <label for="date_from">Từ ngày</label>
+                                <input type="date" class="form-control" id="date_from" name="date_from"
+                                       t-att-value="date_from"/>
+                            </div>
+                            <div class="col-md-4 form-group">
+                                <label for="date_to">Đến ngày</label>
+                                <input type="date" class="form-control" id="date_to" name="date_to"
+                                       t-att-value="date_to"/>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12 text-right">
+                                <button type="submit" class="btn btn-primary">
+                                    <i class="fa fa-search"></i> Tìm kiếm
+                                </button>
+                                <a href="/clinic/appointments" class="btn btn-secondary ml-2">
+                                    <i class="fa fa-refresh"></i> Đặt lại
+                                </a>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+
             <!-- Form tạo lịch hẹn mới -->
             <div class="card form-container mb-4">
                 <div class="card-header bg-primary text-white">
@@ -96,6 +137,9 @@
                 <div class="col-md-6">
                     <form method="GET" action="/clinic/appointments" class="form-inline">
                         <input type="hidden" name="view_mode" t-att-value="view_mode"/>
+                        <input type="hidden" name="search" t-att-value="search_term"/>
+                        <input type="hidden" name="date_from" t-att-value="date_from"/>
+                        <input type="hidden" name="date_to" t-att-value="date_to"/>
                         <label for="state" class="mr-2">Lọc theo trạng thái:</label>
                         <select name="state" id="state" class="form-control mr-2" onchange="this.form.submit()">
                             <option value="all" t-att-selected="state_filter == 'all'">Tất cả</option>
@@ -107,7 +151,7 @@
                     </form>
                 </div>
                 <div class="col-md-6 text-right view-toggle">
-                    <a t-att-href="'/clinic/appointments?view_mode=list&amp;state=' + state_filter"
+                    <a t-att-href="'/clinic/appointments?view_mode=list&amp;state=' + state_filter + '&amp;search=' + (search_term or '') + '&amp;date_from=' + (date_from or '') + '&amp;date_to=' + (date_to or '')"
                        class="btn btn-outline-primary mr-2" t-att-class="{'active': view_mode == 'list'}">
                         <i class="fa fa-list"></i> Danh sách
                     </a>
